<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setup_bg">

    <RelativeLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px">

        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="100px"
            android:layout_height="100px">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24px"
                android:src="@drawable/go_back_normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/password_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="39px"
            android:fontFamily="zh-Hans"
            android:includeFontPadding="false"
            android:text="@string/wifi_password_done"
            android:textColor="@color/color_pwd_done"
            android:textSize="@dimen/wifi_password_done_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/control"
        android:layout_marginTop="-50px">

        <EditText
            android:id="@+id/wifi_auth_password"
            android:layout_width="675px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:background="@android:color/transparent"
            android:fontFamily="zh-Hans"
            android:hint="@string/wifi_password_tip"
            android:includeFontPadding="false"
            android:inputType="textVisiblePassword"
            android:paddingRight="30px"
            android:text=""
            android:longClickable="false"
            android:textColor="@color/major_text_color"
            android:textColorHint="@color/minor_text_color"
            android:textSize="@dimen/wifi_password_text_size" />

        <ImageView
            android:id="@+id/clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20px"
            android:src="@drawable/clear_all" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/input"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="18px"
        android:src="@drawable/cutting_line" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:layout_below="@+id/input"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="18px"
        android:indeterminate="true"
        android:visibility="invisible" /><!--true value for indeterminate-->

    <ImageView
        android:id="@+id/wrong_pwd_divider"
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:layout_below="@+id/input"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="18px"
        android:src="@drawable/cutting_line_2"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:fontFamily="zh-Hans"
        android:includeFontPadding="false"
        android:text="@string/wifi_wrong_password"
        android:textColor="@color/major_text_color"
        android:textSize="@dimen/wifi_connect_status_size"
        android:visibility="invisible" />
</RelativeLayout>